Mafia Anchor privacy policy update

--- a/Mafia-Anchor/privacy-policy.html
+++ b/Mafia-Anchor/privacy-policy.html
@@ -46,13 +46,14 @@
 <p><em>We do not have control over the data collected by third-party advertisers.</em></p>
 
 <h2>4. Rewarded Ads</h2>
-<p>Mafia Anchor offers <strong>rewarded ads</strong> (you can watch an ad to earn in-game coins). Viewing these ads is <strong>completely optional</strong>. Whether you watch ads or not has no impact on your access to the app's core functionality.</p>
+<p>Mafia Anchor offers <strong>rewarded ads</strong> that allow you to earn in-game coins. Coins are required to start a new game session. These coins are stored <strong>locally</strong> on your device and persist even after closing the app.</p>
+<p>Watching rewarded ads is optional, but may be necessary to earn coins if your balance is low. The ads do not interfere with gameplay logic, and the app does not require an internet connection to function beyond loading the ads.</p>
 
 <h2>5. Children's Privacy</h2>
 <p>Our app is not directed toward children under 13. If you are a parent and believe your child has provided personal data through this app, please contact us, and we will take steps to remove that information.</p>
 
 <h2>6. Data Security</h2>
-<p>We do <strong>not store any user data</strong> on external servers. All gameplay data (like player names and selections) is stored <strong>locally on your device</strong> and resets when the app is closed or restarted.</p>
+<p>We do <strong>not store any user data</strong> on external servers. All gameplay data (like player names and selections) is stored <strong>locally on your device</strong>. Coin balances are also stored locally and not shared with us or third parties.</p>
 
 <h2>7. Changes to This Policy</h2>
 <p>We may update this Privacy Policy from time to time. Any changes will be posted within this section of the app or on our official website.</p>
