Mafia Anchor privacy policy update

--- a/Mafia-Anchor/privacy-policy.html
+++ b/Mafia-Anchor/privacy-policy.html
@@ -50,7 +50,8 @@
 <p>Watching rewarded ads is optional, but may be necessary to earn coins if your balance is low. The ads do not interfere with gameplay logic, and the app does not require an internet connection to function beyond loading the ads.</p>
 
 <h2>5. Children's Privacy</h2>
-<p>Our app is not directed toward children under 13. If you are a parent and believe your child has provided personal data through this app, please contact us, and we will take steps to remove that information.</p>
+<p>Mafia Anchor is suitable for all age groups, including children. However, we do not knowingly collect any personal data from users of any age. All data remains on the device, and no sign-in or account creation is required. Ads displayed in the app are managed by Google AdMob and are subject to their own child-appropriate filters based on user settings and device configuration.</p>
+
 
 <h2>6. Data Security</h2>
 <p>We do <strong>not store any user data</strong> on external servers. All gameplay data (like player names and selections) is stored <strong>locally on your device</strong>. Coin balances are also stored locally and not shared with us or third parties.</p>
